# legion-v2

./: .env  .env.example  CRITICAL_FIXES_SUMMARY.md  Cargo.toml  Containerfile  Containerfile.hardened  Containerfile.local  Containerfile.multi  Containerfile.offline  Containerfile.prover  Containerfile.sidecar  Containerfile.windows  Dockerfile  README.md  build.ps1  deploy.ps1  docker-compose.yml  podman-compose.prod.yml  podman-compose.secure.yml  podman-compose.yml  run-local.ps1  test-api.ps1
.github/workflows/: production.yml
config/: production.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aead_envelope.rs  handshake_parser.rs  proof_verifier.rs
fuzz/src/: corpus_manager.rs  lib.rs  mutation_engine.rs  property_fuzzer.rs
legion-core/src/: config.rs  error.rs
prover/: Cargo.toml
prover/audit_logs/: audit_1756102902.json  audit_1756102954.json  audit_1756103419.json
prover/benches/: benchmark.rs  circuit_performance.rs
prover/examples/: final_example.rs  intensive_test.rs
prover/secure_storage/: authority_dilithium.key  authority_dilithium.pub  prover_dilithium.key  prover_dilithium.pub
prover/src/: deterministic_circuit.rs  dilithium_verifier.rs  final_circuit.rs  forward_secrecy.rs  host_operations.rs  host_wrapper.rs  lib.rs  param_integrity.rs  service.rs  tee_verifier.rs
prover/tests/: integration_tests.rs
scripts/: deploy.sh
security/: apparmor-profile  container-hardening.sh  seccomp-profile.json
sidecar/: Cargo.toml
sidecar/examples/: complete_demo.rs  performance_test.rs
sidecar/src/: aad.rs  advanced_aad.rs  auth.rs  benchmark.rs  cipher_negotiation.rs  crypto.rs  enterprise_nonce.rs  fips_crypto.rs  key_provider.rs  key_schedule.rs  lib.rs  main.rs  metrics_v2.rs  nonce.rs  proof_verifier.rs  quantum_crypto.rs  quantum_key_schedule.rs  real_security.rs  secure_crypto.rs  secure_key_manager.rs  secure_proof.rs  secure_proof_envelope.rs  session_clustering.rs  session_manager.rs  session_store_v2.rs  threadpool_v2.rs
spec/: legion-wire.md
src/: main.rs
src/prover/: final_circuit.rs  host_wrapper.rs  mod.rs  service.rs
tests/: integration.rs  integration_test.rs  security_validation.rs
