[package]
name = "legion-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
legion-prover = { path = "../prover" }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha3 = "0.10"
hmac = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
hex = "0.4"
zeroize = { version = "1.8", features = ["derive"] }
ed25519-dalek = "2.2"
serde = { version = "1.0", features = ["derive"] }
subtle = "2.5"
ring = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
argon2 = "0.5"
rand = "0.8"
halo2_proofs = "0.3"
halo2curves = "0.6"
# Standardized ML-KEM/ML-DSA (FIPS 203/204)
ml-kem = { version = "0.2", features = ["std"], optional = true }
ml-dsa = { version = "0.1.0-pre.2", optional = true }
# Legacy support (feature-gated)
pqcrypto-dilithium = { version = "0.5", optional = true }
pqcrypto-kyber = { version = "0.7", optional = true }
# Performance and threading
tokio = { version = "1.0", features = ["full"] }
crossbeam = "0.8"
core_affinity = { version = "0.8", optional = true }
# New dependencies for Steps 7-16
# rocksdb = "0.21"  # Removed - too heavy for development
sled = "0.34"  # Lightweight embedded database
lru = "0.12"
bincode = "1.3"
prometheus = "0.13"
rayon = "1.8"
serde_json = "1.0"
thiserror = "1.0"
num_cpus = "1.16"
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["ml-kem", "ml-dsa"]
legacy-pq = ["pqcrypto-dilithium", "pqcrypto-kyber"]
performance = ["core_affinity"]
production = ["ml-kem", "ml-dsa", "performance"]

[[bin]]
name = "crypto_demo"
path = "src/main.rs"

[[example]]
name = "secure_demo"
path = "examples/secure_demo.rs"